2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* README.md
	* build.xml
	* lib/commons-io/commons-io-2.4.jar
	* src/dgraph/DGraph.java
		- Remove commons-io

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* README.md
	* doc/api/README.md
	* doc/tutorial/tutorial_lattice.md
	* examples/Examples.java
	* lib/commons-io/commons-io-2.4.jar
	* src/dgraph/DGraph.iuml
	* src/dgraph/DGraph.java
	* src/dgraph/DGraphWriter.iuml
	* src/dgraph/DGraphWriter.java
	* src/dgraph/DGraphWriterDot.iuml
	* src/dgraph/DGraphWriterDot.java
	* src/dgraph/DGraphWriterFactory.iuml
	* src/dgraph/DGraphWriterFactory.java
	* src/dgraph/Edge.iuml
	* src/dgraph/Edge.java
	* src/dgraph/Node.iuml
	* src/dgraph/Node.java
	* src/lattice/BijectiveComponents.java
	* test/dgraph/DGraphTest.java
	* test/dgraph/EdgeTest.java
	* test/dgraph/NodeTest.java
		^ Implement abstract writer pattern for DGraph

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* examples/Examples.java
		^ Update examples

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/Node.iuml
	* src/dgraph/Node.java
	* test/dgraph/NodeTest.java
	* test/lattice/ImplicationalSystemTest.java
		- Remove constructor by copy

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DGraph.java
	* src/lattice/ArrowRelation.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/ClosureSystem.java
	* src/lattice/Context.java
	* src/lattice/ImplicationalSystem.java
		- Don't catch IOException

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* src/lattice/BijectiveComponents.java
		^ Change comments

2014-04-30 Christophe Demko <chdemko@gmail.com>